--- a/api/static/css/main.css
+++ b/api/static/css/main.css
@@ -1361,7 +1361,7 @@ a.mobile-show.search-bar-icon:hover {
 
 ----------------------------------------------------------------------------- */
 .hero-bg {
-  background-image: url(../img/hero-bg.jpg);
+  background-image: url(../img/futini.jpg);
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -2117,7 +2117,7 @@ a.video-play-btn {
 .shop-banner {
   position: relative;
   background-color: #f5f5f5;
-  background-image: url(../img/1.jpg);
+  background-image: url(../img/fondo-dulces.jpg);
   background-size: cover;
   padding: 110px 0px 115px;
 }
