--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -8,29 +8,29 @@
 	<meta name="description" content="Responsive Bootstrap4 Shop Template, Created by Imran Hossain from https://imransdesign.com/">
 
 	<!-- title -->
-	<title>La Favorita</title>
+	<title>FutboShop</title>
 
 	<!-- favicon -->
-	<link rel="shortcut icon" type="image/png" href="{% static 'img/lollipop.png'%}">
+	<link rel="shortcut icon" type="image/png" href="{% static 'img/lollipop1.png' %}">
 	<!-- google font -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
 	<!-- fontawesome -->
-	<link rel="stylesheet" href="../static/css/all.min.css">
+	<link rel="stylesheet" href="{% static '../static/css/all.min.css'%}">
 	<!-- bootstrap -->
-	<link rel="stylesheet" href="../static/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="{% static '../static/bootstrap/css/bootstrap.min.css'%}">
 	<!-- owl carousel -->
-	<link rel="stylesheet" href="../static/css/owl.carousel.css">
+	<link rel="stylesheet" href="{% static '../static/css/owl.carousel.css'%}">
 	<!-- magnific popup -->
-	<link rel="stylesheet" href="../static/css/magnific-popup.css">
+	<link rel="stylesheet" href="{% static '../static/css/magnific-popup.css'%}">
 	<!-- animate css -->
-	<link rel="stylesheet" href="../static/css/animate.css">
+	<link rel="stylesheet" href="{% static '../static/css/animate.css'%}">
 	<!-- mean menu css -->
-	<link rel="stylesheet" href="../static/css/meanmenu.min.css">
+	<link rel="stylesheet" href="{% static '../static/css/meanmenu.min.css'%}">
 	<!-- main style -->
-	<link rel="stylesheet" href="../static/css/main.css">
+	<link rel="stylesheet" href="{% static '../static/css/main.css'%}">
 	<!-- responsive -->
-	<link rel="stylesheet" href="../static/css/responsive.css">
+	<link rel="stylesheet" href="{% static '../static/css/responsive.css'%}">
 
 </head>
 <body>
@@ -54,15 +54,11 @@
 						<!-- menu start -->
 						<nav class="main-menu">
 							<ul>
-								<li class="current-list-item"><a href="#">Home</a>
-									<ul class="sub-menu">
-										<li><a href="index.html">Static Home</a></li>
-										<li><a href="index_2.html">Slider Home</a></li>
-									</ul>
+								<li class="current-list-item"><a href="{% url 'index'%}">Inicio</a>
 								</li>
-								<li><a href="{%url 'login'%}">About</a></li>
-								<li><a href="#">Pages</a>
-									<ul class="sub-menu">
+								<li><a href="">Nosotros</a></li>
+								<li><a href="{% url 'catalogo' %}">Catalogo</a>
+									{% comment %} <ul class="sub-menu">
 										<li><a href="404.html">404 page</a></li>
 										<li><a href="{%url 'about'%}">About</a></li>
 										<li><a href="cart.html">Cart</a></li>
@@ -70,21 +66,12 @@
 										<li><a href="{%url 'login'%}">Login</a></li>
 										<li><a href="news.html">News</a></li>
 										<li><a href="shop.html">Shop</a></li>
-									</ul>
+									</ul> {% endcomment %}
 								</li>
-								<li><a href="news.html">News</a>
+								<li><a href="{% url 'login'%}">Inicia Sesión</a>
 									<ul class="sub-menu">
-										<li><a href="news.html">News</a></li>
-										<li><a href="single-news.html">Single News</a></li>
-									</ul>
-								</li>
-								<li><a href="{%url 'login'%}">Login</a></li>
-								<li><a href="shop.html">Shop</a>
-									<ul class="sub-menu">
-										<li><a href="shop.html">Shop</a></li>
-										<li><a href="checkout.html">Check Out</a></li>
-										<li><a href="single-product.html">Single Product</a></li>
-										<li><a href="cart.html">Cart</a></li>
+										<li><a href="{% url 'form' %}">Registrate</a></li>
+										
 									</ul>
 								</li>
 								<li>
@@ -131,12 +118,11 @@
 				<div class="col-lg-9 offset-lg-2 text-center">
 					<div class="hero-text">
 						<div class="hero-text-tablecell">
-							<p class="subtitle">Calidad & cantidad</p>
-							<h1>Dulceria la Favorita</h1>
-                            <h1>El mejor servicio para ti...!</h1>
+							<p class="subtitle">Mayoreo y Menudeo</p>
+							<h1>Futboshop</h1>
+                            <h1>Los mejores productos para ti...!</h1>
 							<div class="hero-btns">
-								<a href="shop.html" class="boxed-btn">Coleccion de dulces</a>
-								<a href="contact.html" class="bordered-btn">Contact Us</a>
+								<a href="{%url 'catalogo'%}" class="boxed-btn" >Productos</a>
 							</div>
 						</div>
 					</div>
@@ -157,8 +143,7 @@
 							<i class="fas fa-shipping-fast"></i>
 						</div>
 						<div class="content">
-							<h3>Free Shipping</h3>
-							<p>When order over $75</p>
+							<h3>Entregas personales.</h3>
 						</div>
 					</div>
 				</div>
@@ -168,8 +153,7 @@
 							<i class="fas fa-phone-volume"></i>
 						</div>
 						<div class="content">
-							<h3>24/7 Support</h3>
-							<p>Get support all day</p>
+							<h3>Atención al cliente 24/7</h3>
 						</div>
 					</div>
 				</div>
@@ -179,8 +163,7 @@
 							<i class="fas fa-sync"></i>
 						</div>
 						<div class="content">
-							<h3>Refund</h3>
-							<p>Get refund within 3 days!</p>
+							<h3>Siempre actualizados</h3>
 						</div>
 					</div>
 				</div>
@@ -196,8 +179,8 @@
 			<div class="row">
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="section-title">	
-						<h3><span class="orange-text">Our</span> Products</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, fuga quas itaque eveniet beatae optio.</p>
+						<h3><span class="orange-text">Nuestros</span> Productos</h3>
+						<p>Lo mas vendido!</p>
 					</div>
 				</div>
 			</div>
@@ -206,30 +189,30 @@
 				<div class="col-lg-4 col-md-6 text-center">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/product-img-1.jpg" alt=""></a>
+							<a href="single-product.html"><img src="{% static '../static/img/products/m3.jpg'%}" alt=""></a>
 						</div>
-						<h3>Strawberry</h3>
-						<p class="product-price"><span>Per Kg</span> 85$ </p>
+						<h3>Balon</h3>
+						<p class="product-price"><span>Pz</span> $850 </p>
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6 text-center">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/product-img-2.jpg" alt=""></a>
+							<a href="single-product.html"><img src="{% static '../static/img/products/m4.jpg'%}" alt=""></a>
 						</div>
-						<h3>Berry</h3>
-						<p class="product-price"><span>Per Kg</span> 70$ </p>
+						<h3>Tacos</h3>
+						<p class="product-price"><span>Pz</span> $700 </p>
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6 offset-md-3 offset-lg-0 text-center">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/product-img-3.jpg" alt=""></a>
+							<a href="single-product.html"><img src="{% static '../static/img/products/m6.jpg'%}" alt=""></a>
 						</div>
-						<h3>Lemon</h3>
-						<p class="product-price"><span>Per Kg</span> 35$ </p>
+						<h3>Playera </h3>
+						<p class="product-price"><span>Pz</span> $1000 </p>
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
 				</div>
@@ -252,17 +235,16 @@
                                 </span>
                             </div>
                         </div>
-                    	<img src="assets/img/a.jpg" alt="">
+                    	<img src="{% static '../static/img/m7.jpg'%}" alt="">
                     </div>
                 </div>
                 <!--Content Column-->
                 <div class="content-column col-lg-6">
-					<h3><span class="orange-text">Deal</span> of the month</h3>
-                    <h4>Hikan Strwaberry</h4>
-                    <div class="text">Quisquam minus maiores repudiandae nobis, minima saepe id, fugit ullam similique! Beatae, minima quisquam molestias facere ea. Perspiciatis unde omnis iste natus error sit voluptatem accusant</div>
+					<h1><span class="orange-text">Nuestra</span> Ubicación</h1>
+                    <h3>Te esperamos!</h3>
+                    <div class="text">Av. Bordo de Xochiaca, Las Flores, 57310 Cdad. Nezahualcóyotl, Méx.</div>
                     <!--Countdown Timer-->
-                    <div class="time-counter"><div class="time-countdown clearfix" data-countdown="2020/2/01"><div class="counter-column"><div class="inner"><span class="count">00</span>Days</div></div> <div class="counter-column"><div class="inner"><span class="count">00</span>Hours</div></div>  <div class="counter-column"><div class="inner"><span class="count">00</span>Mins</div></div>  <div class="counter-column"><div class="inner"><span class="count">00</span>Secs</div></div></div></div>
-                	<a href="cart.html" class="cart-btn mt-3"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
+
                 </div>
             </div>
         </div>
@@ -277,7 +259,7 @@
 					<div class="testimonial-sliders">
 						<div class="single-testimonial-slider">
 							<div class="client-avater">
-								<img src="assets/img/avaters/avatar1.png" alt="">
+								<img src="{% static '../static/img/avaters/avatar1.png'%}" alt="">
 							</div>
 							<div class="client-meta">
 								<h3>Saira Hakim <span>Local shop owner</span></h3>
@@ -291,7 +273,7 @@
 						</div>
 						<div class="single-testimonial-slider">
 							<div class="client-avater">
-								<img src="assets/img/avaters/avatar2.png" alt="">
+								<img src="{% static '/img/avaters/avatar2.png'%}" alt="">
 							</div>
 							<div class="client-meta">
 								<h3>David Niph <span>Local shop owner</span></h3>
@@ -305,7 +287,7 @@
 						</div>
 						<div class="single-testimonial-slider">
 							<div class="client-avater">
-								<img src="assets/img/avaters/avatar3.png" alt="">
+								<img src="{% static '../static/img/avaters/avatar3.png'%}" alt="">
 							</div>
 							<div class="client-meta">
 								<h3>Jacob Sikim <span>Local shop owner</span></h3>
@@ -330,16 +312,16 @@
 			<div class="row">
 				<div class="col-lg-6 col-md-12">
 					<div class="abt-bg">
-						<a href="https://www.youtube.com/watch?v=DBLlFWYcIGQ" class="video-play-btn popup-youtube"><i class="fas fa-play"></i></a>
+					<img src="{% static "../static/img/fucho.jpg" %}">						
 					</div>
 				</div>
 				<div class="col-lg-6 col-md-12">
 					<div class="abt-text">
-						<p class="top-sub">Since Year 1999</p>
-						<h2>We are <span class="orange-text">Fruitkha</span></h2>
-						<p>Etiam vulputate ut augue vel sodales. In sollicitudin neque et massa porttitor vestibulum ac vel nisi. Vestibulum placerat eget dolor sit amet posuere. In ut dolor aliquet, aliquet sapien sed, interdum velit. Nam eu molestie lorem.</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente facilis illo repellat veritatis minus, et labore minima mollitia qui ducimus.</p>
-						<a href="about.html" class="boxed-btn mt-4">know more</a>
+						<p class="top-sub">Desde 2010</p>
+						<h2>Somos <span class="orange-text">Futboshop</span></h2>
+						<p>
+							Somos los numero 1 tanto en productos como en precios </p>
+						{% comment %} <a href="about.html" class="boxed-btn mt-4">know more</a> {% endcomment %}
 					</div>
 				</div>
 			</div>
@@ -348,80 +330,10 @@
 	<!-- end advertisement section -->
 	
 	<!-- shop banner -->
-	<section class="shop-banner">
-    	<div class="container">
-        	<h3>December sale is on! <br> with big <span class="orange-text">Discount...</span></h3>
-            <div class="sale-percent"><span>Sale! <br> Upto</span>50% <span>off</span></div>
-            <a href="shop.html" class="cart-btn btn-lg">Shop Now</a>
-        </div>
-    </section>
+	
 	<!-- end shop banner -->
 
-	<!-- latest news -->
-	<div class="latest-news pt-150 pb-150">
-		<div class="container">
-
-			<div class="row">
-				<div class="col-lg-8 offset-lg-2 text-center">
-					<div class="section-title">	
-						<h3><span class="orange-text">Our</span> News</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, fuga quas itaque eveniet beatae optio.</p>
-					</div>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="col-lg-4 col-md-6">
-					<div class="single-latest-news">
-						<a href="single-news.html"><div class="latest-news-bg news-bg-1"></div></a>
-						<div class="news-text-box">
-							<h3><a href="single-news.html">You will vainly look for fruit on it in autumn.</a></h3>
-							<p class="blog-meta">
-								<span class="author"><i class="fas fa-user"></i> Admin</span>
-								<span class="date"><i class="fas fa-calendar"></i> 27 December, 2019</span>
-							</p>
-							<p class="excerpt">Vivamus lacus enim, pulvinar vel nulla sed, scelerisque rhoncus nisi. Praesent vitae mattis nunc, egestas viverra eros.</p>
-							<a href="single-news.html" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6">
-					<div class="single-latest-news">
-						<a href="single-news.html"><div class="latest-news-bg news-bg-2"></div></a>
-						<div class="news-text-box">
-							<h3><a href="single-news.html">A man's worth has its season, like tomato.</a></h3>
-							<p class="blog-meta">
-								<span class="author"><i class="fas fa-user"></i> Admin</span>
-								<span class="date"><i class="fas fa-calendar"></i> 27 December, 2019</span>
-							</p>
-							<p class="excerpt">Vivamus lacus enim, pulvinar vel nulla sed, scelerisque rhoncus nisi. Praesent vitae mattis nunc, egestas viverra eros.</p>
-							<a href="single-news.html" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6 offset-md-3 offset-lg-0">
-					<div class="single-latest-news">
-						<a href="single-news.html"><div class="latest-news-bg news-bg-3"></div></a>
-						<div class="news-text-box">
-							<h3><a href="single-news.html">Good thoughts bear good fresh juicy fruit.</a></h3>
-							<p class="blog-meta">
-								<span class="author"><i class="fas fa-user"></i> Admin</span>
-								<span class="date"><i class="fas fa-calendar"></i> 27 December, 2019</span>
-							</p>
-							<p class="excerpt">Vivamus lacus enim, pulvinar vel nulla sed, scelerisque rhoncus nisi. Praesent vitae mattis nunc, egestas viverra eros.</p>
-							<a href="single-news.html" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-12 text-center">
-					<a href="news.html" class="boxed-btn">More News</a>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- end latest news -->
+	
 
 	<!-- logo carousel -->
 	<div class="logo-carousel-section">
@@ -457,32 +369,21 @@
 			<div class="row">
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-box about-widget">
-						<h2 class="widget-title">About us</h2>
-						<p>Ut enim ad minim veniam perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae.</p>
+						<h2 class="widget-title">Acerca de Nosotros</h2>
+						<p>Tu dulceria favorita ubicada en Cd. Nezahualcoyotl.</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-box get-in-touch">
-						<h2 class="widget-title">Get in Touch</h2>
+						<h2 class="widget-title">Contacto</h2>
 						<ul>
-							<li>34/8, East Hukupara, Gifirtok, Sadan.</li>
+							<li>Av. Pantitlan Cd. Nezahualcoyotl</li>
 							<li>support@fruitkha.com</li>
 							<li>+00 111 222 3333</li>
 						</ul>
 					</div>
 				</div>
-				<div class="col-lg-3 col-md-6">
-					<div class="footer-box pages">
-						<h2 class="widget-title">Pages</h2>
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="services.html">Shop</a></li>
-							<li><a href="news.html">News</a></li>
-							<li><a href="contact.html">Contact</a></li>
-						</ul>
-					</div>
-				</div>
+				
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-box subscribe">
 						<h2 class="widget-title">Subscribe</h2>
@@ -503,8 +404,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-md-12">
-					<p>Copyrights &copy; 2019 - <a href="https://imransdesign.com/">Imran Hossain</a>,  All Rights Reserved.<br>
-						Distributed By - <a href="https://themewagon.com/">Themewagon</a>
+					<p>Copyrights &copy; 2023 - <a href="https://imransdesign.com/">Cesar Torres</a>
 					</p>
 				</div>
 				<div class="col-lg-6 text-right col-md-12">
@@ -524,25 +424,25 @@
 	<!-- end copyright -->
 	
 	<!-- jquery -->
-	<script src="{% static 'js/jquery-1.11.3.min.js'%}"></script>
+	<script src="{% static '/js/jquery-1.11.3.min.js' %}"></script>
 	<!-- bootstrap -->
-	<script src="{% static 'js/bootstrap.min.js'%}"></script>
+	<script src="{% static '/bootstrap/js/bootstrap.min.js' %}"></script>
 	<!-- count down -->
-	<script src="{% static 'js/jquery.countdown.js'%}"></script>
+	<script src="{% static '/js/jquery.countdown.j' %}s"></script>
 	<!-- isotope -->
-	<script src="{% static 'js/jquery.isotope-3.0.6.min.js'%}"></script>
+	<script src="{% static '/js/jquery.isotope-3.0.6.min.js' %}"></script>
 	<!-- waypoints -->
-	<script src="{% static 'js/waypoints.js'%}"></script>
+	<script src="{% static '/js/waypoints.js' %}"></script>
 	<!-- owl carousel -->
-	<script src="{% static 'js/owl.carousel.min.js'%}"></script>
+	<script src="{% static '/js/owl.carousel.min.js' %}"></script>
 	<!-- magnific popup -->
-	<script src="{% static 'js/jquery.magnific-popup.min.js'%}"></script>
+	<script src="{% static '/js/jquery.magnific-popup.min.js' %}"></script>
 	<!-- mean menu -->
-	<script src="{% static 'js/jquery.meanmenu.min.js'%}"></script>
+	<script src="{% static '/js/jquery.meanmenu.min.js' %}"></script>
 	<!-- sticker js -->
-	<script src="{% static 'js/sticker.js'%}"></script>
+	<script src="{% static '/js/sticker.js' %}"></script>
 	<!-- main js -->
-	<script src="{% static 'js/main.js'%}"></script>
+	<script src="{% static '/js/main.js' %}"></script>
 
 </body>
 </html>
