--- a/api/templates/login_dul.html
+++ b/api/templates/login_dul.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Login Template</title>
+  <title>FutbolShop</title>
   <link href="https://fonts.googleapis.com/css?family=Karla:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.materialdesignicons.com/4.8.95/css/materialdesignicons.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -17,12 +17,12 @@
       <div class="card login-card">
         <div class="row no-gutters">
           <div class="col-md-5">
-            <img src="{%static 'img/dul.jpg'%}" alt="login" class="login-card-img">
+            <img src="{%static 'img/fucho.jpg'%}" alt="login" class="login-card-img">
           </div>
           <div class="col-md-7">
             <div class="card-body">
               <div class="brand-wrapper">
-                <img src="{% static '../static/img/logo.svg'%}" alt="logo" class="logo">
+                <img src="{% static '../static/img/lollipop1.png'%}" alt="logo" class="logo">
               </div>
               <p class="login-card-description">Inicia Sesión</p>
               <form method="POST" action="{%url 'login'%}">
@@ -43,7 +43,7 @@
                   {% endfor %}
                 </form>
                 <a href="#!" class="forgot-password-link">Forgot password?</a>
-                <p class="login-card-footer-text">Don't have an account? <a href="{%url 'form'%}" class="text-reset">Register here</a></p>
+                <p class="login-card-footer-text">¿Aún no tienes cuenta? <a href="{%url 'form'%}" class="text-reset">Click Aquí!</a></p>
                 <nav class="login-card-footer-nav">
                   <a href="#!">Terms of use.</a>
                   <a href="#!">Privacy policy</a>
