--- a/api/templates/payment.html
+++ b/api/templates/payment.html
@@ -10,15 +10,16 @@
 </head>
 <body>
     <div class="heading_container">
-        <h1>Verifica tus productos: {{product.name}}</h1>
-            <div class="products">
-                <img class="img" src="{{product.image}}" alt="">
-                <p>Dulceria la favorita</p>
-                <p>Price: $ 1 USD</p>
-                <p>Description: dulces deano</p>
-                <!-- <button>Purchase</button> -->
-                <p>
-                </p>
+        <h1>Verifica tus productos</h1>
+        <div id="cart" class="cart-container">
+            <h2>Carrito de Compras</h2>
+            <ul id="cart-items">
+              <!-- Aquí se agregarán los elementos seleccionados -->
+            </ul>
+            <p>
+              Total: $<span id="cart-total">0</span>
+            </p>
+          </div>
                 {{paypal.render}}
             </div>  
         </div>
