--- a/api/templates/signin.html
+++ b/api/templates/signin.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sign Up Form by Colorlib</title>
-
+    <title>FutboShop</title>
+    <link rel="shortcut icon" type="image/png" href="{% static 'img/lollipop1.png' %}">
     <!-- Font Icon -->
     <link rel="stylesheet" href="../static/fonts/material-icon/css/material-design-iconic-font.min.css">
 
@@ -22,29 +22,26 @@
             <div class="container">
                 <div class="signup-content">
                     <div class="signup-form">
-                        <h2 class="form-title">Sign up</h2>
+                        <h2 class="form-title"><strong>Registrate</strong></h2>
                         <form method="POST" class="register-form" id="register-form" action="{%url 'form'%}">
                             {% csrf_token %}
                             <div class="form-group">
                                 <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                                <input type="text" name="name" id="name" placeholder="Your Name" request/>
+                                <input type="text" name="name" id="name" placeholder="Nombre completo" request/>
                             </div>
                             <div class="form-group">
                                 <label for="email"><i class="zmdi zmdi-email"></i></label>
-                                <input type="email" name="email" id="email" placeholder="Your Email" request/>
+                                <input type="email" name="email" id="email" placeholder="Correo Electronico" request/>
                             </div>
                             <div class="form-group">
                                 <label for="pass"><i class="zmdi zmdi-lock"></i></label>
-                                <input type="password" name="pass1" id="pass" placeholder="Password" request/>
+                                <input type="password" name="pass1" id="pass" placeholder="Contraseña" request/>
                             </div>
                             <div class="form-group">
                                 <label for="re-pass"><i class="zmdi zmdi-lock-outline"></i></label>
-                                <input type="password" name="re_pass" id="re_pass" placeholder="Repeat your password"/>
+                                <input type="password" name="re_pass" id="re_pass" placeholder="Repite la contraseña"/>
                             </div>
-                            <div class="form-group">
-                                <input type="checkbox" name="agree-term" id="agree-term" class="agree-term" />
-                                <label for="agree-term" class="label-agree-term"><span><span></span></span>I agree all statements in  <a href="#" class="term-service">Terms of service</a></label>
-                            </div>
+                           
                             <div class="form-group form-button">
                                 <input type="submit" name="signup" id="signup" class="form-submit" value="Register"/>
                             </div>
@@ -56,8 +53,8 @@
                         </form>
                     </div>
                     <div class="signup-image">
-                        <figure><img src="{%static 'img/signin.jpg'%}" alt="sing up image"></figure>
-                        <a href="{%url 'login'%}" class="signup-image-link">I am already member</a>
+                        <figure><img src="{%static '../static/img/signin-image2.jpg'%}" alt="sing up image"></figure>
+                        <a href="{%url 'login'%}" class="signup-image-link">Ya tengo cuenta!</a>
                     </div>
                 </div>
             </div>
